<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:gravity="center"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <ImageView
                android:layout_marginTop="50dp"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:src="@drawable/logo_tribunal"
                android:scaleType="fitCenter"
                android:layout_marginBottom="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acerca_del_TEECH"
                android:textSize="30sp"
                android:textColor="#000000"/>
            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:background="@color/colorAccent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:background="@color/colorAccent"
                    android:layout_width="350dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <Button
                        android:layout_marginTop="5dp"
                        android:layout_width="200dp"
                        android:background="@color/colorPrimaryDark"
                        android:id="@+id/btn_quienes_somos"
                        android:text="@string/btn_quienes_somos"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp" />
                    <Button
                        android:layout_marginTop="5dp"
                        android:layout_width="200dp"
                        android:id="@+id/btn_guia_metodo_impug"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/btn_guia_medio_impug"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp" />

                    <Button
                        android:layout_marginTop="5dp"
                        android:layout_width="200dp"
                        android:id="@+id/btn_directorio"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/btn_directorio"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>



</LinearLayout>